--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
         <div class="clear">
 	<br><hr><br>
-	<b><center><font size="2">Diksha Kalra - <a href="https://github.com/DikshaKalra">GitHub</a> - <a href="https://www.linkedin.com/in/diksha-kalra-1b6a07197/">LinkedIn</a>
+	<b><center><font size="2">Diksha Kalra - <a href="https://github.com/DikshaKalra">GitHub</a> - <a href="https://www.linkedin.com/in/diksha-kalra-1b6a07197/">LinkedIn</a> - <a href="https://dikshakalra.github.io/assessment-project/">My Project</a>
 	</font></center></b>
 	</div>
     
